@@ -13,12 +13,13 @@ userdir-ldap (0.3.XXX) UNRELEASED; urgency=low
     - do not hard-code 'debian.org' in the 'write-zonefile debian.org' call,
       but instead re-use the domain from email-append.
     - now preserve server side modifcation times when rsyncing data.
+  * userdir_ldap.py: read auth password from environment if set.
 
   [ Stephen Gran ]
   * Fix deprecation warnings for sha module by using hashlib module instead
   * ud-fingerserv: update Net::LDAP import
 
- -- Peter Palfrader <weasel@debian.org>  Thu, 29 Dec 2011 22:05:22 +0100
+ -- Peter Palfrader <weasel@debian.org>  Mon, 05 Mar 2012 11:17:36 +0100
 
 userdir-ldap (0.3.79) unstable; urgency=low
 
